@@ -1,5 +1,13 @@
 2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/category/GradientBarPainter.java
+    (paintBar): Use outline paint,
+    (paintBarShadow): Use shadow paint,
+    * source/org/jfree/chart/renderer/category/StandardBarPainter.java
+    (paintBarShadow): Use shadow paint.
+
+2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/AbstractRenderer.java
     (clearSeriesPaints): New method,
     (clearSeriesStrokes): Likewise.
